# codomain

./: .gitignore  CONTEXT.md  Daily Log.md  Home.md  Project Brief.md  README.md  TODO.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
Nested/: Deep Note.md
docs/issues/: 001-preview-refresh-module.md  002-preview-navigation-ownership.md  003-root-folder-markdown-files-module.md  004-neovim-adapter-active-markdown-file.md  005-app-shell-thin-runtime.md  006-view-mode-behavior-module.md  007-markdown-rendering-extension-structure.md  README.md
docs/release/: dmg.md  homebrew.md  local-install.md
scripts/: codomain  install-local
src/: appShellRuntime.js  appShellRuntime.test.js  main.js  markdownEscaping.js  markdownPreview.js  markdownPreview.test.js  markdownRendering.js  markdownRendering.test.js  markdownWorkspace.js  markdownWorkspace.test.js  previewNavigation.js  previewNavigation.test.js  previewRefresh.js  previewRefresh.test.js  previewSourceLines.js  previewSourceLines.test.js  styles.css  terminalRuntime.js  terminalRuntime.test.js  viewModePolicy.js  viewModePolicy.test.js  viewModeRuntime.js  viewModeRuntime.test.js  viewModes.js  viewModes.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: active_markdown_file.rs  lib.rs  main.rs  root_folder_markdown_files.rs
src/markdownRendering/extensions/: mathExtension.js  pipeSentinel.js  wikilinkExtension.js
src/markdownRendering/shared/: mathParsing.js
