[package]
name = "codomain"
version = "0.1.0"
description = "Root-bound Neovim and Markdown preview workspace"
authors = ["codomain"]
edition = "2021"

[lib]
name = "codomain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
portable-pty = "0.8"
rmpv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
